# gpg

./: CMakeLists.txt  generate_multiview_dataset.sh
cfg/: params.cfg
include/gpg/: antipodal.h  candidates_generator.h  cloud_camera.h  grasp_set.h  hand_search.h  plot.h
src/: generate_candidates.cpp  generate_samples.cpp
src/gpg/: antipodal.cpp  candidates_generator.cpp  cloud_camera.cpp  finger_hand.cpp  grasp_set.cpp  hand_search.cpp  plot.cpp  point_list.cpp
